Mon Sep 13  6:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Miscellaneous minor bugfixes plus,
	* Source/NSDate.m: Year 2001 bug fixed - had silly assertion in
	generation of time interval since reference date for current time.
	* Source/NSScanner.m: optimised (well, mostly).
	* Headers/Foundation/NSScanner.h: update for optimisatio).

Sun Sep 12 20:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSDictionary.m: optimise by avoiding objc method lookup
	overheads wherever possible.
	* Source/NSGDictionary.m: likewise.

Fri Sep  3 11:57:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSString.m: speed up path handling a bit by caching
	method for testing for path separators - also fixed appending
	of path extensions and components to be according to spec.

Sat Aug 21  6:26:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/gdomap.c: Fix for probing for other gdomap processes on the
	net.

1999-08-19  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSObjCRuntime.m: patch from Tim Bissell to help in
	debugging. (show which non-existant ivar you wanted.)

1999-09-07  Adam Fedor  <fedor@gnu.org>

	* Version: 0.6.0

	* configure.in: Add test for solaris libraries, freebsd threads.
	* Source/mframe/config.guess: Update to latest version	
	* Source/mframe/config.sub: Likewise.
	
Sun Sep  5  9:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* config/config_thread.m: new file
	* configure.in: Update to check to see if obc runtime uses threads
	so that we can include the thread library if necessary - and later
	onbjc tests won't all fail on threaded systems.
	Also - force use of fake-main stuff on bsd systems.
	* Source/NSProcessInfo.m: Remove bsd workaround - didn't work.

1999-08-29   Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSObjCRuntime.m: added a patch from Tim Bissell
	<tim.bissell@dresdnerkb.com>. Adds better debugging information